--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -1,19 +1,20 @@
-name: Generate GitHub Stats
+name: Metrics
 
 on:
-  schedule:
-    - cron: "0 0 * * *"
+  schedule: [{cron: "0 0 * * *"}]
   workflow_dispatch:
 
 jobs:
-  build:
+  github-metrics:
     runs-on: ubuntu-latest
     steps:
-      - name: Generate Stats
-        uses: anuraghazra/github-readme-stats@v1
+      - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.GH_STATS_TOKEN }}
-          username: Wojtek--
-          show_icons: true
-          count_private: true
-          theme: tokyonight
+          user: Wojtek--
+          config_timezone: Europe/Warsaw
+          base: header, activity, community, repositories
+          plugin_isocalendar: yes
+          plugin_languages: yes
+          plugin_lines: yes
+          plugin_traffic: yes
